2005-03-17  Inge Wallin  <inge@lysator.liu.se>

	Separate the toolbar for chart types from the actions.
	* kchart.rc (Actions): Renamed from Chart
	(Types): New toolbar.
	
2005-03-15  Fredrik Edemar <f_edemar@linux.se>

	Changes in the data editor:
	* Show the column names in the header column and the row names in
	the header row. Click on a header column/row to rename it.
	* Do not ask for confirmation when the user wants to remove an
	empty row or column.
	
	Changes in KDChart:
	* Fixed bug 101290 (KChart changes font for axes when Polar chart
	is chosen).

2005-03-14  Inge Wallin  <inge@lysator.liu.se>
	
	Remove more unnecessary files
	* kchartBarConfigPage.{h,cc}: removed
	* kchartGeometryConfigPage.{h,cc}: removed

	----------------------------------------------------------------

	Remove unused file:
	* kchartBarConfigDialog.{h,cc}
	
	----------------------------------------------------------------

	Don't include kchartDataEditor.h where is shouldn't be included.
	* kchartBarConfigDialog.cc, kchartColorConfigPage.cc,
	kchartDataConfigPage.cc: remove it, and include koChart.h instead

2005-03-13  Inge Wallin  <inge@lysator.liu.se>

	Make the page layout dialog better looking.
	* kchartPageLayout.cc (constructor): Place settings inside a
	button box.
	
	----------------------------------------------------------------

	Clean out old cruft from the data editor.
	*  kchartDataEditor.{h,cc} (setLegend): removed
	(getLegend): removed
	(setXLabel): removed
	(getXLabel): removed
	* kchart_part.h (axisLabelText{short,long}): removed
	(m_longLabels, m_shortLabels): removed
	* kchart_view.cc (edit): remove all stuff within #if 0 - #endif
	
	----------------------------------------------------------------

	Fix problem with mixed plurals/singulars in chart names.
	* kchart_view.cc (KChartView): Rename some actions.

	The default chart is marked as modified even when it's not.
	* kchart_part.cc (KChartPart): Remove call to setModified().
